added modal to navbar

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -43,9 +43,19 @@
   }
 }
 
+#myBtn2 {
+  cursor: pointer;
+}
+
 .navbar-links li {
   margin-left: 56px;
   list-style: none;
+}
+
+.navbar-links li:hover {
+  opacity: 0.7;
+  -webkit-transform: translate(0px, -8px);
+          transform: translate(0px, -8px);
 }
 
 .navbar-links li a {
@@ -795,6 +805,9 @@ body {
   cursor: pointer;
   -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15), 0 2px 4px rgba(0, 0, 0, 0.12);
           box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15), 0 2px 4px rgba(0, 0, 0, 0.12);
+  opacity: 0.7;
+  -webkit-transform: translate(0px, -8px);
+          transform: translate(0px, -8px);
 }
 
 .btn-green {
