--- a/src/css/style.css
+++ b/src/css/style.css
@@ -116,6 +116,7 @@
     display: flex;
   }
   .navbar-links {
+    background-color: rgba(0, 0, 0, 0.741);
     display: none;
     width: 100%;
   }
